Fixing file names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 half = { git = "https://github.com/starkat99/half-rs.git", branch = "main", features = ["num-traits", "rand_distr"] }
-dfdx = { path = "../dfdx", default-features = false, features = ["std", "cuda", "ci-check", "f16"] }
+dfdx = { path = "../dfdx", default-features = false, features = ["std", "f16"] }
 memmap2 = "0.5.10"
+
+[features]
+default = []
+cuda = ["dfdx/cuda"]
