--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 half = { git = "https://github.com/starkat99/half-rs.git", branch = "main", features = ["num-traits", "rand_distr"] }
 dfdx = { path = "../dfdx", default-features = false, features = ["std", "f16"] }
 memmap2 = "0.5.10"
+clap = { version = "4.2.5", features = ["derive"] }
 
 [features]
 default = []
