--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2021"
 
 [dependencies]
 half = { git = "https://github.com/starkat99/half-rs.git", branch = "main", features = ["num-traits", "rand_distr"] }
-dfdx = { git = "https://github.com/coreylowman/dfdx.git", branch = "main", default-features = false, features = ["std", "f16"] }
+dfdx = { path = "../dfdx", default-features = false, features = ["std", "fast-alloc", "f16"] }
 memmap2 = "0.5.10"
 clap = { version = "4.2.5", features = ["derive"] }
 rust_tokenizers = "8.1.0"
 rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
 
 [features]
-default = []
+default = ["cpu"]
+cpu = ["dfdx/cpu"]
 cuda = ["dfdx/cuda"]
