Auto detecting model structure based on config.json

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ memmap2 = "0.5.10"
 clap = { version = "4.2.5", features = ["derive"] }
 rust_tokenizers = "8.1.0"
 rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
+json = "0.12.4"
 
 [features]
 default = ["cpu"]
