--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dfdx = { git = "https://github.com/coreylowman/dfdx.git", branch = "main", default-features = false, features = ["std", "fast-alloc", "f16"] }
+dfdx = { version = "0.13.0", default-features = false, features = ["std", "fast-alloc", "f16"] }
 memmap2 = "0.5.10"
 clap = { version = "4.2.5", features = ["derive"] }
 rust_tokenizers = "8.1.0"
